# aws-securityhub-summary-rust

./: Cargo.toml  README.md  event-example.json
src/: env.rs  handler.rs  main.rs  model.rs  securityhub.rs  sns.rs  utils.rs
